# amplifier-distro

./: .gitignore  README.md  pyproject.toml
.amplifier/recipes/: README.md  e2e-browser-tests.yaml
bundle/behaviors/: start.yaml
bundle/modules/hooks-handoff/: pyproject.toml
bundle/modules/hooks-handoff/amplifier_module_hooks_handoff/: __init__.py
bundle/modules/hooks-handoff/tests/: test_handoff_injection.py
distro-server/: .gitignore  README.md  pyproject.toml
distro-server/scripts/: amplifier-distro.service  docker-entrypoint.sh  install-service.sh
distro-server/tests/: test_bundle_start_yaml.py  test_chat_app.py  test_chat_approval.py  test_chat_backend_queue.py  test_chat_cancellation.py  test_chat_connection.py  test_chat_display_messages.py  test_chat_images.py  test_chat_session_history.py  test_chat_translator.py  test_cli.py  test_daemon.py  test_memory.py  test_overlay.py  test_overlay_reload.py  test_protocol_adapters.py  test_server.py  test_service.py  test_services.py  test_session_backend.py  test_slack_bridge.py  test_spawn_registration.py  test_voice_connection.py  test_voice_routes.py  test_voice_static_index.py  test_voice_transcript.py  test_watchdog.py
docs/plans/: 2026-02-26-session-spawning.md  2026-02-27-distro-remaining-issues.md  2026-02-27-fix-approval-display-plan.md  (+8 more)
scripts/: install.sh
tests/: test_backup.py  test_chat_approval.py  test_chat_commands.py  test_conventions.py  test_daemon.py  test_preferences_removed.py  test_server.py  test_server_static.py  test_services.py  test_session_backend.py  test_slack_bridge.py
(+57 files in other folders)
